--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,15 @@
+html {
+  max-width: 100vw;
+  background-color: black
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  max-width: 100vw;
   -moz-osx-font-smoothing: grayscale;
   background-color: black
 }
